# sovi

./: README.md
box/: .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac
box/algorithm/: Makefile  Makefile.am  expfit.cpp  expfit_more.cpp
box/soil/: Makefile.am  delete_Makefile  old_Makefile  soil.cpp  soil.hpp  soilapp.cpp
box/sysconf/: pacman.conf
