bin_PROGRAMS = soil

AM_CPPFLAGS = -I/Users/jianxinsun/research/visit/visit2.13.2/visit/silo/4.10.1/i386-apple-darwin18_clang/include 
AM_LDFLAGS = -L/Users/jianxinsun/research/visit/visit2.13.2/visit/silo/4.10.1/i386-apple-darwin18_clang/lib

LDADD = -lsiloh5

noinst_HEADERS = soil.hpp

soil_SOURCES = soilapp.cpp soil.cpp
